Fix jumping numbers navigation

--- a/components/shared/NumbersNavigation/NumbersNavigation.module.scss
+++ b/components/shared/NumbersNavigation/NumbersNavigation.module.scss
@@ -13,6 +13,7 @@
   @include breakpoints.xl {
     flex-direction: column;
     gap: 32px;
+    width: auto;
   }
 
   .number {
